bai tap 2 Day 6: Dan lai Pricing Table bang Flexbox

--- a/css/style.css
+++ b/css/style.css
@@ -152,3 +152,105 @@ body {
 .education-degree b {
     font-weight: 700;
 }
+
+/* -------------------- pricing-flex -------------------- */
+
+.wrapper-pricing {
+    background-color: #5176e6;
+    padding: 44px;
+}
+
+.container-pricing-table {
+    width: 504px;
+    background-color: #f5f9fd;
+    font-size: 0;
+    margin: 0 auto;
+    padding: 28px 52px;
+
+    /* Canh giữa nội dung trong từng khối bằng Flexbox. */
+    /* Dùng Flexbox đặt 3 khối giá ngang hàng (Basic – Pro – Premium). */
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+.pricing {
+    /* width: 124px;
+    height: 184px; */
+
+    /* Đảm bảo các khối có kích thước bằng nhau, cách đều. */
+    flex-grow: 1;
+    padding: 18px 8px 16px 12px;
+    background-color: #fff;
+    border: 1px solid inherit;
+    border-radius: 4px;
+}
+
+/* Sử dụng :hover để tạo hiệu ứng nổi lên khi di chuột qua mỗi gói */
+.pricing:hover {
+    box-shadow: 1px 2px 16px;
+}
+
+.pricing-content {
+    height: 104px;
+    margin-bottom: 32px;
+}
+
+.pricing ul {
+    /* list-style: disc;
+    margin-left: 9px; */
+    line-height: 12px;
+}
+/* Dùng :nth-child(2) để làm nổi bật gói ở giữa (gói Pro) */
+.wrapper-pricing .pricing:nth-child(2) {
+    /* margin: 0 12px; */
+    background: linear-gradient(to bottom, #71a1ef, #025ff6);
+}
+.wrapper-pricing .pricing:nth-child(2) input {
+    background-color: #fff;
+}
+
+.pricing p,
+.pricing li {
+    font-size: 0.3125rem;
+}
+
+/* Sử dụng ::before để thêm icon ✓ trước mỗi tính năng có sẵn */
+.pricing p {
+    display: inline-block;
+}
+.pricing ul li p::before {
+    display: inline-block;
+    content: "✓";
+    color: #22c55e;
+    font-weight: 700;
+}
+.pricing .type-price,
+.pricing .price {
+    display: block;
+    text-align: center;
+    font-weight: 700;
+}
+
+.pricing .type-price {
+    font-size: 0.3125rem;
+}
+
+.pricing .price {
+    font-size: 0.75rem;
+    /* font-weight: 700; */
+    margin: 8px 0;
+}
+
+.pricing input {
+    display: block;
+    width: 60px;
+    height: 14px;
+    margin: 0 auto;
+    font-size: 0.3125rem;
+    background-color: #eaeaf2;
+    border: 1px solid #eaeaf2;
+    border-radius: 2px;
+    cursor: pointer;
+}
