--- a/css/style.css
+++ b/css/style.css
@@ -321,3 +321,99 @@ body {
 .buy-watch {
     color: #14130f;
 }
+
+/* -------------------- Register Layout -------------------- */
+.wrapper-register-layout {
+    --width-layout: 50%;
+
+    display: flex;
+    height: 100vh;
+    background-color: #313131;
+    /* padding: 50px 0; */
+}
+
+.container-register-layout {
+    display: flex;
+    width: 660px;
+    height: 550px;
+    background-color: #fff;
+    /* Dùng Flexbox để căn giữa form theo chiều ngang và dọc. */
+    margin: auto;
+}
+
+/* Bố cục chia làm 2 nửa bằng nhau */
+.bg-register-layout,
+.content-register-layout {
+    width: var(--width-layout);
+    height: 100%;
+}
+
+.bg-register-layout {
+    background: url("https://preview.colorlib.com/theme/bootstrap/signup-form-20/images/bg.jpg")
+        no-repeat center center;
+}
+
+.content-register-layout {
+    font-size: 0.75rem;
+    font-weight: 500;
+    color: #151515;
+
+    padding: 40px 20px;
+}
+
+.content-register-layout h1 {
+    font-size: 1.5rem;
+    font-weight: 400;
+    color: #151515;
+}
+
+.form {
+    display: flex;
+    flex-wrap: wrap;
+    /* justify-content: space-between; */
+    gap: 20px;
+
+    margin: 20px 0;
+}
+
+.form-group {
+    flex-grow: 1; /* giúp input dàn full width */
+    display: flex;
+    align-items: center;
+}
+
+.form-group label {
+    display: inline-block;
+    width: 108px;
+}
+
+.form-group input {
+    flex-grow: 1;
+    height: 28px;
+    background-color: #f7f7f7;
+    padding: 8px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    color: #959592;
+}
+
+.checkbox input {
+    flex-grow: 0;
+}
+
+.checkbox label {
+    flex-grow: 1;
+    font-weight: 500;
+    color: #bdbdbd;
+    padding: 0 8px;
+}
+
+.content-register-layout .btn {
+    background-color: #151515;
+    color: #fff;
+    font-size: 0.625rem;
+    font-weight: 600;
+    padding: 12px 8px;
+    border: 1px solid transparent;
+    border-radius: 20px;
+}
